# social-care-omaha

./: .env  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml  requirements.txt
backend/db/init/: init.sql
backend/src/: config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/src/routers/: assessments.py  care_plans.py  clients.py  interventions.py  patients.py  problems.py  static.py
backend/src/services/: encryption.py  export.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  api.js
